--- a/project.html
+++ b/project.html
@@ -53,14 +53,13 @@
         <!-- Panel (Spotlight) -->
         <section class="panel spotlight medium right" id="first">
           <div class="content span-7">
-            <h2 class="major">Sed etiam aenean</h2>
+            <h2 class="major">Fast development</h2>
             <p>
-              Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem
-              maximus hendrerit orci, sit amet elementum massa hendrerit sed.
-              Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium
-              libero eleifend euismod sed tristique. Quisque dictum magna risus,
-              id ultricies justo sagittis vitae. Sed id odio tempor, porttitor
-              elit amet, gravida hendrerit fringilla lorem ipsum dolor.
+              React, with its powerful composition model, allows us to reuse
+              code for our applications. We create diverse and reusable
+              components and assemble existing ones in various combinations.
+              This strategy reduces software development time, making it faster
+              and more affordable to release a web application.
             </p>
           </div>
           <div class="image filtered tinted" data-position="top left">
@@ -118,14 +117,12 @@
         <!-- Panel (Spotlight) -->
         <section class="panel spotlight large left">
           <div class="content span-5">
-            <h2 class="major">Magna amet tempus</h2>
+            <h2 class="major">Maintenance and customization</h2>
             <p>
-              Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum,
-              magna dui bibendum ex, sagittis commodo enim risus sed magna
-              nulla. Vestibulum ut consequat velit. Curabitur vitae libero
-              lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis
-              maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem
-              turpis congue pulvinar.
+              React is one of the best frontend tools for building web user
+              interfaces. It has a component-based architecture, which means we
+              can reuse code and create component libraries. This saves
+              significant time and money on web development.
             </p>
           </div>
           <div class="image filtered tinted" data-position="top right">
