--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Vector</title>
+    <title id="top">Vector</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -41,6 +41,16 @@
                   href="#first"
                   class="button primary color1 circle icon solid fa-angle-right"
                   >Next</a
+                >
+              </li>
+              <li>
+                <a href="#projects" class="button primary color1 circle"
+                  >projects</a
+                >
+              </li>
+              <li>
+                <a href="#contact" class="button primary color1 circle"
+                  >conact</a
                 >
               </li>
             </ul>
@@ -129,7 +139,7 @@
           </div>
         </section>
         <!-- Panel -->
-        <section class="panel">
+        <section class="panel" id="projects">
           <div class="intro color2">
             <h2 class="major">Recent Work</h2>
             <p>
@@ -145,33 +155,33 @@
           <div class="gallery">
             <a
               href="/project.html"
-              class="image filtered span-2-5"
+              class="image filtered tinted darkened span-2-5"
               data-position="top"
-              ><img src="images/gallery/thumbs/04.jpg" alt=""
+              ><img src="images/gallery/fulls/elec1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/09.jpg"
-              class="image filtered span-2-5"
+              href="images/gallery/fulls/nadlan1.png"
+              class="image filtered tinted darkened span-2-5"
               data-position="right"
-              ><img src="images/gallery/thumbs/09.jpg" alt=""
+              ><img src="images/gallery/fulls/nadlan1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/09.jpg"
-              class="image filtered tinted span-2-5"
+              href="images/gallery/fulls/fastway2.png"
+              class="image filtered tinted darkened span-2-5"
               data-position="right"
-              ><img src="images/gallery/thumbs/09.jpg" alt=""
+              ><img src="images/gallery/fulls/fastway2.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/09.jpg"
-              class="image filtered span-2-5"
-              data-position="right"
-              ><img src="images/gallery/thumbs/09.jpg" alt=""
+              href="images/gallery/fulls/sadgroup1.png"
+              class="image filtered tinted darkened span-2-5"
+              data-position="center"
+              ><img src="images/gallery/fulls/sadgroup1.png" alt=""
             /></a>
           </div>
         </section>
 
         <!-- Panel -->
-        <section class="panel color4-alt">
+        <section class="panel color4-alt" id="contact">
           <div class="intro color4">
             <h2 class="major">Contact</h2>
             <p>
@@ -236,6 +246,14 @@
 
         <!-- Copyright -->
         <div class="copyright">&copy; Vector Design: <a href="/">VSD</a>.</div>
+
+        <a
+          href="#top"
+          id="go-to-top-btn"
+          style="margin: auto 20px"
+          class="button primary color1 circle icon solid fa-angle-up"
+          >UP</a
+        >
       </div>
     </div>
 
