--- a/project.html
+++ b/project.html
@@ -22,229 +22,51 @@
     <div id="page-wrapper">
       <!-- Wrapper -->
       <div id="wrapper">
-        <!-- Panel (Banner) -->
-        <section class="panel banner right">
-          <div class="content color0 span-3-75">
-            <h1 class="major">
-              Vector<br />
-              Software Development
-            </h1>
-            <p>
-              To deliver products of the highest quality, we follow Extreme
-              Programming best practices that include code review, pair
-              programming, test-driven development, continuous integration, and
-              automated testing.
-            </p>
-            <ul class="actions">
-              <li>
-                <a
-                  href="#first"
-                  class="button primary color1 circle icon solid fa-angle-right"
-                  >Next</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/pic01.jpg" alt="" />
-          </div>
-        </section>
-
-        <!-- Panel (Spotlight) -->
-        <section class="panel spotlight medium right" id="first">
-          <div class="content span-7">
-            <h2 class="major">Fast development</h2>
-            <p>
-              React, with its powerful composition model, allows us to reuse
-              code for our applications. We create diverse and reusable
-              components and assemble existing ones in various combinations.
-              This strategy reduces software development time, making it faster
-              and more affordable to release a web application.
-            </p>
-          </div>
-          <div class="image filtered tinted" data-position="top left">
-            <img src="images/pic02.jpg" alt="" />
-          </div>
-        </section>
-
         <!-- Panel -->
-        <section class="panel color1">
-          <div class="intro joined">
-            <h2 class="major">Amet lorem</h2>
-            <p>
-              Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis
-              congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum
-              amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna
-              etiam.
-            </p>
-          </div>
-          <div class="inner">
-            <ul class="grid-icons three connected">
-              <li>
-                <span class="icon fa-gem"
-                  ><span class="label">Lorem</span></span
-                >
-              </li>
-              <li>
-                <span class="icon solid fa-camera-retro"
-                  ><span class="label">Ipsum</span></span
-                >
-              </li>
-              <li>
-                <span class="icon solid fa-cog"
-                  ><span class="label">Dolor</span></span
-                >
-              </li>
-              <li>
-                <span class="icon solid fa-paper-plane"
-                  ><span class="label">Sit</span></span
-                >
-              </li>
-              <li>
-                <span class="icon solid fa-chart-bar"
-                  ><span class="label">Amet</span></span
-                >
-              </li>
-              <li>
-                <span class="icon solid fa-code"
-                  ><span class="label">Nullam</span></span
-                >
-              </li>
-            </ul>
-          </div>
-        </section>
-
-        <!-- Panel (Spotlight) -->
-        <section class="panel spotlight large left">
-          <div class="content span-5">
-            <h2 class="major">Maintenance and customization</h2>
-            <p>
-              React is one of the best frontend tools for building web user
-              interfaces. It has a component-based architecture, which means we
-              can reuse code and create component libraries. This saves
-              significant time and money on web development.
-            </p>
-          </div>
-          <div class="image filtered tinted" data-position="top right">
-            <img src="images/pic03.jpg" alt="" />
-          </div>
-        </section>
-
         <!-- Panel -->
         <section class="panel">
           <div class="intro color2">
-            <h2 class="major">Elit integer</h2>
+            <h2 class="major">Recent Work</h2>
             <p>
-              Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis
-              congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum
-              amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna
-              etiam.
+              With several years of experience as a React development agency, we
+              can say that React is the best way to develop big and fast web
+              apps with JavaScript. React allows for creating interactive UIs,
+              smoothly updating components, developing new features without
+              rewriting existing code, and efficiently dealing with SEO thanks
+              to server-side rendering. Besides, React has an active global
+              community behind it.
             </p>
           </div>
-          <div class="gallery">
-            <div class="group span-3">
-              <a
-                href="images/gallery/fulls/01.jpg"
-                class="image filtered span-3"
-                data-position="bottom"
-                ><img src="images/gallery/thumbs/01.jpg" alt=""
-              /></a>
-              <a
-                href="images/gallery/fulls/02.jpg"
-                class="image filtered span-1-5"
-                data-position="center"
-                ><img src="images/gallery/thumbs/02.jpg" alt=""
-              /></a>
-              <a
-                href="images/gallery/fulls/03.jpg"
-                class="image filtered span-1-5"
-                data-position="bottom"
-                ><img src="images/gallery/thumbs/03.jpg" alt=""
-              /></a>
-            </div>
+          <div class="gallery" id="projects">
             <a
-              href="images/gallery/fulls/04.jpg"
-              class="image filtered span-2-5"
+              href="/project.html"
+              class="image filtered tinted darkened span-2-5"
               data-position="top"
-              ><img src="images/gallery/thumbs/04.jpg" alt=""
+              ><img src="images/gallery/fulls/elec1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/09.jpg"
-              class="image filtered span-2-5"
+              href="images/gallery/fulls/nadlan1.png"
+              class="image filtered tinted darkened span-2-5"
               data-position="right"
-              ><img src="images/gallery/thumbs/09.jpg" alt=""
+              ><img src="images/gallery/fulls/nadlan1.png" alt=""
+            /></a>
+            <a
+              href="images/gallery/fulls/fastway2.png"
+              class="image filtered tinted darkened span-2-5"
+              data-position="right"
+              ><img src="images/gallery/fulls/fastway2.png" alt=""
+            /></a>
+            <a
+              href="images/gallery/fulls/sadgroup1.png"
+              class="image filtered tinted darkened span-2-5"
+              data-position="center"
+              ><img src="images/gallery/fulls/sadgroup1.png" alt=""
             /></a>
           </div>
         </section>
+    
 
-        <!-- Panel -->
-        <section class="panel color4-alt">
-          <div class="intro color4">
-            <h2 class="major">Contact</h2>
-            <p>
-              Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis
-              congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum
-              amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna
-              etiam.
-            </p>
-          </div>
-          <div class="inner columns divided">
-            <div class="span-3-25">
-              <form method="post" action="#">
-                <div class="fields">
-                  <div class="field half">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
-                  </div>
-                  <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
-                  </div>
-                  <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="4"></textarea>
-                  </div>
-                </div>
-                <ul class="actions">
-                  <li>
-                    <input
-                      type="submit"
-                      value="Send Message"
-                      class="button primary"
-                    />
-                  </li>
-                </ul>
-              </form>
-            </div>
-            <div class="span-1-5">
-              <ul class="contact-icons color1">
-                <li class="icon brands fa-twitter">
-                  <a href="#">@untitled-tld</a>
-                </li>
-                <li class="icon brands fa-facebook-f">
-                  <a href="#">facebook.com/untitled</a>
-                </li>
-                <li class="icon brands fa-snapchat-ghost">
-                  <a href="#">@untitled-tld</a>
-                </li>
-                <li class="icon brands fa-instagram">
-                  <a href="#">@untitled-tld</a>
-                </li>
-                <li class="icon brands fa-medium-m">
-                  <a href="#">medium.com/untitled</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
-
-        <!-- Copyright -->
-        <div class="copyright">
-          &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.
-        </div>
-      </div>
-    </div>
-
+    
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
