--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
         </section>
 
-        <section class="panel spotlight medium right" id="first">
+        <section class="panel spotlight medium right">
           <div class="content span-7">
             <h2 class="major">Fast development</h2>
             <p>
@@ -71,7 +71,11 @@
               and more affordable to release a web application.
             </p>
           </div>
-          <div class="image filtered tinted darkened" data-position="top left">
+          <div
+            class="image filtered tinted darkened"
+            data-position="center right"
+            id="first"
+          >
             <img src="images/pic02.jpg" alt="" />
           </div>
         </section>
@@ -124,7 +128,7 @@
           </div>
         </section>
         <!-- Panel (Spotlight) -->
-        <section class="panel spotlight large left">
+        <section class="panel spotlight large center">
           <div class="content span-5">
             <h2 class="major">Maintenance and customization</h2>
             <p>
@@ -134,7 +138,10 @@
               significant time and money on web development.
             </p>
           </div>
-          <div class="image filtered tinted darkened" data-position="top right">
+          <div
+            class="image filtered tinted darkened"
+            data-position="bottom right"
+          >
             <img src="images/pic03.jpg" alt="" />
           </div>
         </section>
