--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
         <section class="panel banner right">
           <div class="content color0 span-3-75">
             <h1 class="major">
-              Vector<br />
+              <span style="color: var(--color-primary)">Vector</span><br />
               Software Development
             </h1>
+
             <p>
-              To deliver products of the highest quality, we follow Extreme
-              Programming best practices that include code review, pair
-              programming, test-driven development, continuous integration, and
-              automated testing.
+              To deliver products of the
+              <span style="color: var(--color-primary)">highest quality</span>,
+              we follow
+              <span style="color: var(--color-primary)"
+                >Extreme Programming best practices</span
+              >
+              that include code review, pair programming, test-driven
+              development, continuous integration, and automated testing.
             </p>
             <ul class="actions">
               <li>
@@ -44,13 +49,15 @@
                 >
               </li>
               <li>
-                <a href="#projects" class="button primary color1 circle"
-                  >projects</a
+                <a
+                  href="#projects"
+                  class="button primary color1 circle icon solid fas fa-laptop-code"
+                  >works</a
                 >
               </li>
               <li>
                 <a href="#contact" class="button primary color1 circle"
-                  >conact</a
+                  >get free estimate</a
                 >
               </li>
             </ul>
@@ -60,26 +67,30 @@
           </div>
         </section>
 
-        <section class="panel spotlight medium right">
+        <section class="panel spotlight small center">
           <div class="content span-7">
             <h2 class="major">Fast development</h2>
             <p>
-              React, with its powerful composition model, allows us to reuse
-              code for our applications. We create diverse and reusable
-              components and assemble existing ones in various combinations.
-              This strategy reduces software development time, making it faster
-              and more affordable to release a web application.
+              React, with its
+              <span style="color: var(--color-primary)"
+                >powerful composition model</span
+              >, allows us to reuse code for our applications. We create diverse
+              and reusable components and assemble existing ones in various
+              combinations. This strategy reduces software development time,
+              making it
+              <span style="color: var(--color-primary)"
+                >faster and more affordable </span
+              >to release a web application.
             </p>
           </div>
           <div
             class="image filtered tinted darkened"
-            data-position="center right"
-            id="first"
+            data-position="center left"
           >
             <img src="images/pic02.jpg" alt="" />
           </div>
         </section>
-
+        <span id="first"></span>
         <!-- Panel -->
         <section class="panel color1">
           <div class="intro joined">
@@ -128,14 +139,18 @@
           </div>
         </section>
         <!-- Panel (Spotlight) -->
-        <section class="panel spotlight large center">
-          <div class="content span-5">
+        <section class="panel spotlight medium center">
+          <div class="content span-7">
             <h2 class="major">Maintenance and customization</h2>
             <p>
-              React is one of the best frontend tools for building web user
-              interfaces. It has a component-based architecture, which means we
-              can reuse code and create component libraries. This saves
-              significant time and money on web development.
+              React is one of the
+              <span style="color: var(--color-primary)"
+                >best frontend tools for building web user interfaces</span
+              >. It has a component-based architecture, which means we can reuse
+              code and create component libraries.
+              <span style="color: var(--color-primary)"
+                >This saves significant time and money on web development.</span
+              >
             </p>
           </div>
           <div
@@ -150,13 +165,16 @@
           <div class="intro color2">
             <h2 class="major">Recent Work</h2>
             <p>
-              With several years of experience as a React development agency, we
-              can say that React is the best way to develop big and fast web
-              apps with JavaScript. React allows for creating interactive UIs,
-              smoothly updating components, developing new features without
-              rewriting existing code, and efficiently dealing with SEO thanks
-              to server-side rendering. Besides, React has an active global
-              community behind it.
+              With years of experience as a React development agency, we can say
+              that React is the best way to develop big and fast web apps. React
+              allows for creating interactive UIs,
+              <span style="color: var(--color-primary)"
+                >smoothly updating components</span
+              >, developing new features without rewriting existing code, and
+              <span style="color: var(--color-primary)">
+                efficiently dealing with SEO</span
+              >
+              thanks to server-side rendering.
             </p>
           </div>
           <div class="gallery">
@@ -192,13 +210,14 @@
           <div class="intro color4">
             <h2 class="major">Contact</h2>
             <p>
-              Are you looking for a team to upgrade your React app? Or do you
-              need extensive maintenance, support, and react JS consulting
-              services? We can help you in either case — we provide affordable
-              maintenance, so you can count on ongoing support, enhancements,
-              upgrades, and technical improvements to your product. All our
-              clients with whom we’ve built React apps receive support services
-              after the first release.
+              Are you looking for a team to upgrade your app? Or do you need
+              extensive maintenance, support, and consulting services?
+              <span style="color: var(--color-primary)"
+                >We can help you in either case</span
+              >, we provide affordable maintenance, so you can count on ongoing
+              support, enhancements, upgrades, and technical improvements to
+              your product. All our clients receive support services after the
+              first release.
             </p>
           </div>
           <div class="inner columns divided">
@@ -258,7 +277,7 @@
           href="#top"
           id="go-to-top-btn"
           style="margin: auto 20px"
-          class="button primary color1 circle icon solid fa-angle-up"
+          class="button primary color1 circle icon solid fas fa-fast-backward"
           >UP</a
         >
       </div>
