--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <section class="panel banner right">
           <div class="content color0 span-3-75">
             <h1 class="major">
-              <span style="color: var(--color-primary)">Vector</span><br />
-              Software Development
+              <span style="color: var(--color-primary)">Vector</br></span>
+              Software Development</span>
             </h1>
 
             <p>
@@ -179,27 +179,35 @@
           </div>
           <div class="gallery">
             <a
-              href="/project.html"
-              class="image filtered tinted darkened span-2-5"
+            href="/projectES.html"
+
+              class="image filtered  span-2-5"
               data-position="top"
+              style="border:solid 1px var(--color-primary)"
               ><img src="images/gallery/fulls/elec1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/nadlan1.png"
-              class="image filtered tinted darkened span-2-5"
+            href="/projectNA.html"
+
+              class="image filtered span-2-5"
               data-position="right"
+              style="border:solid 1px var(--color-primary)"
               ><img src="images/gallery/fulls/nadlan1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/fastway2.png"
-              class="image filtered tinted darkened span-2-5"
-              data-position="right"
+              href="/projectFW.html"
+              class="image filtered span-2-5"
+              data-position="left"
+              style="border:solid 1px var(--color-primary)"
+
               ><img src="images/gallery/fulls/fastway2.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/sadgroup1.png"
-              class="image filtered tinted darkened span-2-5"
+            href="/projectSG.html"
+              class="image filtered  span-2-5"
               data-position="center"
+              style="border:solid 1px var(--color-primary)"
+
               ><img src="images/gallery/fulls/sadgroup1.png" alt=""
             /></a>
           </div>
@@ -232,8 +240,12 @@
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" />
                   </div>
+                  <div class="field half">
+                    <label for="phone">Phone / WhatsApp / Telegram Number(optional)</label>
+                    <input type="text" name="phone" id="phone" />
+                  </div>
                   <div class="field">
-                    <label for="message">Message</label>
+                    <label for="message">Tell us about your project</label>
                     <textarea name="message" id="message" rows="4"></textarea>
                   </div>
                 </div>
