--- a/projectNA.html
+++ b/projectNA.html
@@ -111,7 +111,8 @@
           </div>
           <div class="inner columns divided">
             <div class="span-3-25">
-              <form method="post" action="#">
+              <form action="https://formsubmit.co/vector.development@protonmail.com"
+              method="POST">
                 <div class="fields">
                   <div class="field half">
                     <label for="name">Name</label>
