--- a/projectSG.html
+++ b/projectSG.html
@@ -94,7 +94,10 @@
           </div>
           <div class="inner columns divided">
             <div class="span-3-25">
-              <form method="post" action="#">
+              <form
+                action="https://formsubmit.co/vector.development@protonmail.com"
+                method="POST"
+              >
                 <div class="fields">
                   <div class="field half">
                     <label for="name">Name</label>
