--- a/projectES.html
+++ b/projectES.html
@@ -165,11 +165,15 @@
         </section>
 
     
+        <!-- Copyright -->
+        <div class="copyright">&copy; Vector Design: <a href="/">VSD</a>.</div>
+
         <a
           href="#top"
-          style="margin: auto;"
-      class="button primary color1 icon solid fas fa-fast-backward"
-          ></a
+          id="go-to-top-btn"
+          style="margin: auto 20px"
+          class="button primary color1 circle icon solid fas fa-fast-backward"
+          >UP</a
         >
       </div>
     </div>
