--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-<script type="text/javascript">
-(function() {
-emailjs.init("user_A3tXKDkAc3op50NXflVc6");
-})();
-</script>
+  <link rel="icon" href="logo.svg" type="image/x-icon">
   </head>
   <body class="is-preload">
     <!-- Page Wrapper -->
