--- a/projectCA.html
+++ b/projectCA.html
@@ -26,18 +26,16 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
-            <h2 class="major">FastWay</h2>
+            <h2 class="major">Creative Agency</h2>
             <p>
-              delivery company website, single-page-application, using react
-              router for rendering different screens. project include form
-              sections, different design features, custom animated components,
-              based on the original company website which was designed with
-              wordpress.
+              Basic SPA(single page application), customizable, maintainable,
+              fast, and quick to update. custom React components & minimalist
+              design.
             </p>
             <ul class="contact-icons">
               <li class="icon solid fas fa-external-link-alt">
                 <a
-                  href="https://keen-nightingale-4d0442.netlify.app/"
+                  href="https://hopeful-benz-0d6c35.netlify.app/"
                   target="_blank"
                   style="
                     font-weight: 200;
@@ -48,34 +46,35 @@
               </li>
             </ul>
           </div>
+
           <div class="gallery">
             <a
-              href="images/gallery/fulls/fastway2.png"
+              href="images/gallery/fulls/ca1.png"
               class="image filtered span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/fastway2.png" alt=""
+              ><img src="images/gallery/fulls/ca1.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/fastway3.png"
+              href="images/gallery/fulls/ca2.png"
               class="image filtered span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/fastway3.png" alt=""
+              ><img src="images/gallery/fulls/ca2.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/fastway4.png"
+              href="images/gallery/fulls/ca3.png"
               class="image filtered span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/fastway4.png" alt=""
+              ><img src="images/gallery/fulls/ca3.png" alt=""
             /></a>
             <a
-              href="images/gallery/fulls/fastway5.png"
+              href="images/gallery/fulls/ca4.png"
               class="image filtered span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/fastway5.png" alt=""
+              ><img src="images/gallery/fulls/ca4.png" alt=""
             /></a>
           </div>
         </section>
