--- a/index.html
+++ b/index.html
@@ -181,26 +181,34 @@
           </div>
           <div class="gallery">
             <a
+            href="/projectCA.html"
+
+              class="image filtered  span-2-5"
+              data-position="left"
+              style="border:1px solid var(--color-primary)"
+              ><img src="images/gallery/fulls/ca2.png" alt=""
+            /></a>
+            <a
             href="/projectES.html"
 
               class="image filtered  span-2-5"
               data-position="top"
-              style="border:solid 1px var(--color-primary)"
+              style="border:1px solid var(--color-primary)"
               ><img src="images/gallery/fulls/elec1.png" alt=""
             /></a>
             <a
             href="/projectNA.html"
 
               class="image filtered span-2-5"
-              data-position="right"
-              style="border:solid 1px var(--color-primary)"
+              data-position="top"
+              style="border:1px solid var(--color-primary)"
               ><img src="images/gallery/fulls/nadlan1.png" alt=""
             /></a>
             <a
               href="/projectFW.html"
               class="image filtered span-2-5"
-              data-position="left"
-              style="border:solid 1px var(--color-primary)"
+              data-position="top"
+              style="border:1px solid var(--color-primary)"
 
               ><img src="images/gallery/fulls/fastway2.png" alt=""
             /></a>
@@ -208,7 +216,7 @@
             href="/projectSG.html"
               class="image filtered  span-2-5"
               data-position="center"
-              style="border:solid 1px var(--color-primary)"
+              style="border:1px solid var(--color-primary)"
 
               ><img src="images/gallery/fulls/sadgroup1.png" alt=""
             /></a>
