--- a/projectNA.html
+++ b/projectNA.html
@@ -16,6 +16,8 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+  <link rel="icon" href="logo.svg" type="image/x-icon">
+
   </head>
   <body class="is-preload">
     <!-- Page Wrapper -->
