--- a/projectSG.html
+++ b/projectSG.html
@@ -16,6 +16,7 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+    <link rel="icon" href="logo.svg" type="image/x-icon" />
   </head>
   <body class="is-preload">
     <!-- Page Wrapper -->
