added new project

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
           </div>
           <div class="gallery">
             <a
+            href="/projectEQ.html"
+
+              class="image filtered  span-2-5"
+              data-position="left"
+              style="border:1px solid var(--color-primary)"
+              ><img src="images/gallery/fulls/shopiq1.png" alt=""
+            /></a>
+            <a
             href="/projectCA.html"
 
               class="image filtered  span-2-5"
