--- a/projectEQ.html
+++ b/projectEQ.html
@@ -28,9 +28,9 @@
           <div class="intro color2">
             <h2 class="major">Shopiq</h2>
             <p>
-              E-commerce design template, converted to react arrow functions,
-              clean code, lightwheight PWA, different features such as cart,
-              product slider and modern resposnsice design.
+              E-commerce react application, converted to react arrow functional
+              components, lightwheight PWA, different features such as cart,
+              product slider and a modern resposnsive design.
             </p>
             <ul class="contact-icons">
               <li class="icon solid fas fa-external-link-alt">
