--- a/projectSpendify.html
+++ b/projectSpendify.html
@@ -22,6 +22,11 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Spendify</span>
+            </div>
             <h2 class="major">Spendify</h2>
             <p>
               eCommerce web application, client-side features include shopping
